--- a/WeatherApp/views/settings.handlebars
+++ b/WeatherApp/views/settings.handlebars
@@ -1,6 +1,6 @@
 <center>
   {{> page_header}}
-  <h3 style="color:#B22222;">Settings</h3>
+  <h3 style="color:#B22222; margin-top: 75px; margin-bottom: -10px;">Settings</h3>
 </center>
 
 <center>
@@ -67,7 +67,7 @@
      style="font-size: 18px; 
             font-style: italic; 
             margin-top: 20px; 
-            margin-left: 185px;">Return</a>
+            margin-left: 176px;">Return</a>
     </div>        
    </div>
 
